--- a/htmlcss/table.html
+++ b/htmlcss/table.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+                <ul class="navbar-nav">
+                  <li class="nav-item ">
+                    <a class="nav-link" href="profile.html">Home</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="table.html">List of Students</a>
+                  </li>
+                </ul>
+              </nav>
+              
+              <br>
     <div class="container">
         <div class="row">
             <div class="col col-12 col-sm-12">
