--- a/htmlcss/index.html
+++ b/htmlcss/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
  <div class="container">
+     <br>
     <div class="row">
     <div class="col col-12 col-sm-4" >
     <div class="card align-items-center" style="width: 18rem;">
@@ -25,11 +26,11 @@
             
             <table>
                 <tr>
-                    <td>username:</td>
+                    <td>Username:</td>
                     <td><input type="text" class="form-control" id="name" /></td>
                 </tr>
                 <tr>
-                    <td>password</td>
+                    <td>Password</td>
 
                     <td><input type="password" name="" id="pass" class="form-control"> </td>
                 </tr>
