--- a/htmlcss/opert.html
+++ b/htmlcss/opert.html
@@ -75,6 +75,7 @@
                                         <p >Number1<input id="num1"type="number" class="form-control"></p>
                                         <p >Number2<input id="num2"type="number" class="form-control"></p>
                                         <p>Operator<select name="" id="op" class="form-control" onchange="operations();">
+                                                <option >select</option>
                                                 <option value="+">+</option>
                                                 <option value="-">-</option>
                                                 <option value="*">*</option>
