--- a/htmlcss/jquery1.html
+++ b/htmlcss/jquery1.html
@@ -12,7 +12,7 @@
             $('.test').click(function(){
                     //alert("clicked");
                     $(this).hide();     //to hide the h1 tag because this points to test which is the class of h1 
-
+                   // $('.test').css("color","red");   to change colour of h1 tag
             });
         });
     </script>
